syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_slice_type.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<SliceType<Infallible>>(::quote::quote! { [i64] })"
---
Ok(
    (
        SliceType(
            NoBounds(
                TypePath(
                    TypePath {
                        leading: false,
                        segments: [
                            Simple {
                                id: Id(
                                    Ident(
                                        i64,
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        ),
        0,
    ),
)
