syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_tuple_type_duo.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<TupleType<Ident>>(::quote::quote! { (Hello, World) })"
---
Ok(
    (
        TupleType(
            [
                Ident(
                    Hello,
                ),
                Ident(
                    World,
                ),
            ],
        ),
        0,
    ),
)
