syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_tuple_type_single.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<TupleType<Infallible>>(::quote::quote! { (Hello,) })"
---
Ok(
    (
        TupleType(
            [
                NoBounds(
                    TypePath(
                        TypePath {
                            leading: false,
                            segments: [
                                Simple {
                                    id: Id(
                                        Ident(
                                            Hello,
                                        ),
                                    ),
                                },
                            ],
                        },
                    ),
                ),
            ],
        ),
        0,
    ),
)
