syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_type_dyn.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<Type<Infallible>>(::quote::quote! { dyn Hi })"
---
Ok(
    (
        NoBounds(
            TraitObjectOneBound(
                TraitObjectTypeOneBound(
                    TraitBound {
                        q: false,
                        for: None,
                        ty: TypePath {
                            leading: false,
                            segments: [
                                Simple {
                                    id: Id(
                                        Ident(
                                            Hi,
                                        ),
                                    ),
                                },
                            ],
                        },
                    },
                ),
            ),
        ),
        0,
    ),
)
