syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_type_impl.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<Type>(::quote::quote! { impl Hi })"
---
Ok(
    (
        NoBounds(
            ImplTraitOneBound(
                ImplTraitTypeOneBound(
                    TraitBound {
                        q: false,
                        for: None,
                        ty: TypePath {
                            leading: false,
                            segments: [
                                Simple {
                                    id: Id(
                                        Ident(
                                            Hi,
                                        ),
                                    ),
                                },
                            ],
                        },
                    },
                ),
            ),
        ),
        0,
    ),
)
