syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__types__tests__it_matches_type_path.snap
---
source: syn-state-machine/src/common_tokens/types.rs
expression: "crate::parse::<Type<Infallible>>(::quote::quote! { hello :: World })"
---
Ok(
    (
        NoBounds(
            TypePath(
                TypePath {
                    leading: false,
                    segments: [
                        Simple {
                            id: Id(
                                Ident(
                                    hello,
                                ),
                            ),
                        },
                        Simple {
                            id: Id(
                                Ident(
                                    World,
                                ),
                            ),
                        },
                    ],
                },
            ),
        ),
        0,
    ),
)
